# ImageS-VD

./: .gitignore  CMakeLists.txt  LICENSE.platformdirs  README.md  compresser.cpp  compresser.h  imageS-VD.bat  main.cpp  main.py  requirements.txt
includes/: Channel.h  Compresser.h  Compressor.h  MainWindow.h  channel.h
includes/control/: Action.h  MenuController.h
includes/model/: Channel.h  Compressor.h
includes/view/: MainPanel.h  MainWindow.h
src/: Channel.cpp  Compresser.cpp  Compressor.cpp  MainWindow.cpp  main.cpp  main.py
src/control/: Action.cpp  MenuController.cpp  action.py  compose_thread.py  decompose_thread.py  menu_controller.py  panel_controller.py
src/model/: Channel.cpp  Compressor.cpp  __init__.py  channel.py  compressor.py  main.py
src/view/: MainPanel.cpp  MainWindow.cpp  __init__.py  about_dialog.py  application.py  panel.py  tab_widget.py  window.py
test/: cedits.txt  test.py
translations/: app_en.qm  app_en.ts  app_it.qm  app_it.ts
